manifests/UAT(-1A)/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: onlineui-uat-minus1a
  name: brokerui-uat-minus1a
  namespace: broker-uat-minus1a
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: onlineui-uat-minus1a
  strategy:
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 50%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: onlineui-uat-minus1a
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: onlineuiconfigmap-minus1a
          image: acrcontainerregistrynonprod.azurecr.io/mvtprovisionbrokeronlineui:Latest
          imagePullPolicy: Always
          name: mvtprovisionbrokeronlineui
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              memory: '250Mi'
              cpu: '150m'
            limits:
              memory: '950Mi'
              cpu: '500m'
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: onlineui-uat-minus1a
  name: brokerui-svc-uat-minus1a
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: onlineui-uat-minus1a
  type: ClusterIP
